deploy/kubernetes/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ephemeral-container-exporter-system
  labels:
    app.kubernetes.io/name: kube-ephemeral-container-exporter
    app.kubernetes.io/component: controller
