deploy/kubernetes/manifests/metrics-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-ephemeral-container-exporter-metrics
  namespace: kube-ephemeral-container-exporter-system
  labels:
    app.kubernetes.io/name: kube-ephemeral-container-exporter
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  ports:
    - name: metrics
      port: 8443
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: kube-ephemeral-container-exporter
    app.kubernetes.io/component: controller
